Bug 98740 - bitcode.cpp:102:8: error: ‘Error’ is not a member of ‘llvm’
Summary: bitcode.cpp:102:8: error: ‘Error’ is not a member of ‘llvm’
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Seba
QA Contact: Alejandro Vilicic
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2016-11-15 19:09 UTC by Vinson Lee
Modified: 2016-11-25 08:11 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2016-11-15 19:09:34 UTC
mesa: 341fc0073a3c05fd43e9c7a33613bcb881f25f33 (master 13.1.0-devel)

  CXX      llvm/codegen/libclllvm_la-bitcode.lo
llvm/codegen/bitcode.cpp: In function ‘std::unique_ptr<llvm::Module> clover::llvm::parse_module_library(const clover::module&, llvm::LLVMContext&, std::__cxx11::string&)’:
llvm/codegen/bitcode.cpp:102:8: error: ‘Error’ is not a member of ‘llvm’
    if (::llvm::Error err = mod.takeError()) {
        ^
Comment 1 Emil Velikov 2016-11-15 19:15:31 UTC
Likely caused by the following. Commit seems to be missing a HAVE_LLVM guard like everywhere else.

commit 8e430ff8b060b4e8e922bae24b3c57837da6ea77
Author:     Vedran Miletić <vedran@miletic.net>
AuthorDate: Mon Nov 14 12:17:42 2016 +0100
Commit:     Tom Stellard <thomas.stellard@amd.com>
CommitDate: Mon Nov 14 15:50:29 2016 +0000

    clover: adapt to new error API since LLVM r286752
    
    Tested-by: Dieter Nützel <Dieter@nuetzel-hh.de>
Comment 2 Vinson Lee 2016-11-15 19:42:18 UTC
8e430ff8b060b4e8e922bae24b3c57837da6ea77 is the first bad commit
commit 8e430ff8b060b4e8e922bae24b3c57837da6ea77
Author: Vedran Miletić <vedran@miletic.net>
Date:   Mon Nov 14 12:17:42 2016 +0100

    clover: adapt to new error API since LLVM r286752
    
    Tested-by: Dieter Nützel <Dieter@nuetzel-hh.de>

:040000 040000 39db27c43b4e9586570f89c88fe906116131eab2 9e21c128e992a97726b6e0b7ba89a3792ccd6303 M	src
bisect run success
Comment 3 Alejandro Vilicic 2016-11-18 23:55:18 UTC
revisar error detectado en apliac
Comment 4 Vedran Miletić 2016-11-21 22:19:08 UTC
(In reply to Alejandro Vilicic from comment #3)
> revisar error detectado en apliac

Try this patch: https://lists.freedesktop.org/archives/mesa-dev/2016-November/135787.html
Comment 5 Vinson Lee 2016-11-25 08:11:42 UTC
commit 95ddb37708ca16ccbd0f607d17a82be2de0d07b6
Author: Vedran Miletić <vedran@miletic.net>
Date:   Tue Nov 22 20:25:34 2016 +0100

    clover: Restore support for LLVM <= 3.9.
    
    The commit 8e430ff8b060b4e8e922bae24b3c57837da6ea77 broke support for
    LLVM 3.9 and older versions in Clover. This patch restores it and
    refactors the support using Clover compatibility layer for LLVM.
    
    v2: merged #ifdef blocks
    v3: added support for LLVM 3.6-3.8
    v4: add missing #ifdef around <memory>
    v5: simplify using templates and lambda
    
    Signed-off-by: Vedran Miletić <vedran@miletic.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=98740
    Tested-by[v4]: Pierre Moreau <pierre.morrow@free.fr>
    Tested-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Francisco Jerez <currojerez@riseup.net>
    Reviewed-by: Jan Vesely <jan.vesely@rutgers.edu>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.